samples/aries/aries.yaml
apiVersion: v1
kind: Service
metadata:
  name: aries
  labels:
    app: aries
spec:
  ports:
  - name: aries
    port: 8000
    targetPort: 8080
  selector:
    app: aries
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aries
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aries
      version: v1
  template:
    metadata:
      labels:
        app: aries
        version: v1
    spec:
      serviceAccountName: aries
      containers:
      - image: docker.io/klibio/io.klib.aries.example:develop-latest
        imagePullPolicy: IfNotPresent
        name: aries
        ports:
        - containerPort: 8080
